vlib/v/checker/tests/array_delete_arg_mismatch_err.vv
interface IGameObject {
mut:
	name string
}

struct GameObject implements IGameObject {
mut:
	name string
}

struct Game {
mut:
	objects []IGameObject
}

fn (mut game Game) gc() {
	for obj in game.objects {
		game.objects.delete(obj)
	}
	game.objects.clear()
}

fn main() {}
